default/objects/success__Style__c/success__Style__c.object-meta.xml
<CustomObject>
    <description>Style contains the master set of Colours, Backgrounds and Sounds that are then available for use in Inspire Edition Channels.</description>
    <label>Style</label>
    <nameField>
        <label>Style Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Styles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>