default/objects/success__Style__c/fields/success__Is_Deleted__c.field-meta.xml
<CustomField>
    <fullName>success__Is_Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Deleted</label>
    <type>Checkbox</type>
</CustomField>