default/objects/success__Style__c/fields/success__Type__c.field-meta.xml
<CustomField>
    <fullName>success__Type__c</fullName>
    <label>Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>